manifests/deployment-elf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elf
  name: elf
  namespace: agentx-agents
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elf
  template:
    metadata:
      annotations:
        dapr.io/app-id: elf
        dapr.io/enabled: 'true'
        dapr.io/metrics-port: '59196'
        dapr.io/unix-domain-socket-path: ''
      labels:
        app: elf
    spec:
      containers:
      - env:
        - name: APP_CHANNEL_ADDRESS
          value: '59196'
        - name: DAPR_METRICS_PORT
          value: '59196'
        - name: DEBUG
          value: 'true'
        - name: APP_ID
          value: elf
        image: ghcr.io/xcaliber-health/dapr-apps:elf
        imagePullPolicy: Always
        name: elf
        ports:
        - containerPort: 80
