manifests/deployment-hobbit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    dapr.io/app-id: hobbit
    dapr.io/enabled: 'true'
    dapr.io/metrics-port: '59160'
    dapr.io/unix-domain-socket-path: ''
  labels:
    app: hobbit
  name: hobbit
  namespace: agentx-agents
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hobbit
  template:
    metadata:
      labels:
        app: hobbit
    spec:
      containers:
      - env:
        - name: APP_CHANNEL_ADDRESS
          value: '59160'
        - name: DAPR_METRICS_PORT
          value: '59160'
        - name: DEBUG
          value: 'true'
        - name: APP_ID
          value: hobbit
        image: ghcr.io/xcaliber-health/dapr-apps:hobbit
        name: hobbit
        ports:
        - containerPort: 80
