manifests/service-public-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: public-web
  name: public-web
  namespace: agentx-agents
spec:
  ports:
  - nodePort: 30080
    port: 80
    targetPort: 80
  selector:
    app: public-web
  type: NodePort
