manifests/service-web-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-frontend
  name: web-frontend
  namespace: agentx-agents
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: web-frontend
  type: ClusterIP
