manifests/service-workflow-llm.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: workflow-llm
  name: workflow-llm
  namespace: agentx-agents
spec:
  ports:
  - port: 80
    targetPort: 8004
  selector:
    app: workflow-llm
  type: ClusterIP
